EXTRA_DIST = \
d.bat lst.bat m.bat \
test.lnk \
dtypes.inc psmacros.inc pstypes.inc \
3d.h args.h byteswap.h cfile.h checker.h cmd.h console.h \
d_delay.h d_io.h dtypes.h error.h findfile.h fix.h gr.h grdef.h \
hash.h ibitblt.h iff.h ipx.h loadgl.h maths.h modex.h mono.h \
ogl_init.h pa_enabl.h palette.h pcx.h pstypes.h rle.h strio.h \
strutil.h texmap.h timer.h u_dpmi.h u_mem.h vecmat.h vesa.h \
test.c
