noinst_LIBRARIES = libui.a
INCLUDES = -I$(top_srcdir)/include -I$(top_srcdir)/arch/include

libui_a_SOURCES = \
barbox.c    button.c    checkbox.c  file.c      gadget.c    \
icon.c      inputbox.c  keypad.c    keypress.c  keytrap.c   \
listbox.c   menu.c      menubar.c   message.c   mouse.c     \
number.c    popup.c     radio.c     scroll.c    ui.c        \
uidraw.c    userbox.c   window.c

EXTRA_DIST = \
func.c     func.h      harderr.c   medfunc.c
