EXTRA_PROGRAMS = hogcreate hogextract mvlcreate mvlextract txb2tex tex2txb

hogcreate_SOURCES = hogcreate.c

hogextract_SOURCES = hogextract.c

mvlcreate_SOURCES = mvlcreate.c

mvlextract_SOURCES = mvlextract.c

txb2tex_SOURCES = txb2tex.c

tex2txb_SOURCES = tex2txb.c

utils: $(EXTRA_PROGRAMS)

.PHONY: utils
