noinst_LIBRARIES = libeditor.a
INCLUDES = -I$(top_srcdir)/include -I$(top_srcdir)/arch/include -I$(top_srcdir)/main

libeditor_a_SOURCES = \
autosave.c  centers.c   curves.c    eglobal.c   ehostage.c  \
elight.c    eobject.c   eswitch.c   fixseg.c    func.c      \
group.c     info.c      kbuild.c    kcurve.c    kfuncs.c    \
kgame.c     kgroup.c    khelp.c     kmine.c     ksegmove.c  \
ksegsel.c   ksegsize.c  ktmap.c     kview.c     macro.c     \
med.c       meddraw.c   medmisc.c   medrobot.c  medsel.c    \
medwall.c   mine.c      objpage.c   segment.c   seguvs.c    \
texpage.c   texture.c

EXTRA_DIST = \
centers.h   editor.h    ehostage.h  eobject.h   eswitch.h   \
info.h      kdefs.h     kfuncs.h    macro.h     meddraw.h   \
medlisp.h   medmisc.h   medrobot.h  medsel.h    medwall.h   \
objpage.h   seguvs.h    texpage.h
