EXTRA_DIST = \
x rbaudio.new \
d.bat dd.bat make0000.bat make0001.bat make0100.bat x.bat y.bat \
testk.lnk testm.lnk \
keys.inc \
joy.asm key.asm mouse.asm oldkey.asm timer.asm \
dpmi.h error.h findfile.h ipx.h joy.h key.h mouse.h \
rbaudio.h swiftcfg.h timer.h \
dpmi.c error.c findfile.c ipx.c joyc.c key.c mono.c mouse.c \
rbaudio.c speaker.c testj.c testk.c testm.c testms.c testt.c timerp.c x.c
