EXTRA_DIST = \
dd.bat \
winckpit.asm \
comm.h dd.h direct3d.h ds.h error.h global.h iforce.h midifile.h midiseq.h \
tactile.h winapp.h winmidi.h winregs.h xtapi.h \
comm.c dd.c ddgfx.c ddgr.c ddraw.c direct3d.c ds.c error.c findfile.c gfx.c \
iforce.c ipx.c joyc.c key.c mono.c mouse.c palette.c rbaudio.c swift.c \
tactile.c timer.c winapp.c winmidi.c winmono.c winregs.c xtapi.c
